# req2ops

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: stream.py  upload.py  workspace.py
backend/app/db/: session.py
backend/app/engine/: llm_client.py  orchestrator.py  validator.py
backend/app/engine/crew/: __init__.py  agents.py  graph.py
backend/app/engine/prompts/: __init__.py  control_layer.py  design_breakdown.py  dev_breakdown.py  task_graph.py  understanding.py
backend/app/models/: __init__.py  base.py  project.py  task.py
backend/app/schemas/: __init__.py  control_layer.py  design_plan.py  dev_plan.py  task_graph.py  understanding.py  upload.py  workspace.py
backend/app/services/: execution_builder.py  missing_info.py  next_actions.py  parser.py  transcription.py  visibility.py
backend/app/utils/: file_handler.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/.well-known/: agentic-verify.txt
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: GenericPlanView.jsx  Layout.jsx  LivePreviewPanel.jsx  PageTransition.jsx  ProcessingStatus.jsx  TabBar.jsx  TrustedMarquee.jsx  UploadForm.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: HomePage.jsx  HowItWorksPage.jsx  ProcessingPage.jsx  UploadPage.jsx  WorkspacePage.jsx
frontend/src/utils/: pdf.js  (+1 more)
(+6 files in other folders)
