[project]
name = "req2ops-backend"
version = "0.1.0"
description = "Req2Ops AI — Turn messy client requirements into structured execution plans"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "openai>=1.0.0",
    "groq>=0.8.0",
    "PyMuPDF>=1.24.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
